--- a/style.css
+++ b/style.css
@@ -1,3 +1,97 @@
-body{
-    background-color: aqua;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    background-image: url(images/blank-notebook-with-a-pen-sits-on-an-office-desk-table-surrounded-by-computer-tools-and-a-range-of-materials-background-in-finance-and-banking-flat-lay-top-view-free-photo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.list {
+    height: 70vh;
+    width: 50%;
+    margin-left: 40px;
+    background-color: #fbfbf9;
+    border-radius: 20px;
+    box-shadow: 15px 10px 10px #0159a3;
+    text-align: center;
+    
+}
+@media only screen and (max-width:786px){
+    .list{
+        width: 80%;
+    }
+}
+
+@media only screen and (max-width:468px){
+    .list{
+        width: 90%;
+        margin-right: 40px;
+    }
+}
+
+h1 {
+    margin-top: 20px;
+    color: #201f25;
+    font-family: "Kanit", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    text-shadow: 1px 1px 2px rgb(137, 137, 137);
+}
+input{
+    margin-top: 5px;
+    width: 70%;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 3px 5px 6px rgb(137, 137, 137);
+    border: 1px solid  rgb(137, 137, 137);
+}
+.add{
+    width: 40px;
+    height: 40px;
+    color: #ffffff;
+    font-family: "Kanit", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    border-radius:10px ;
+    background-color: #029bf3;
+    border: 0;
+    box-shadow: 3px 5px 6px rgb(137, 137, 137);
+    transition: 0.4s;
+    
+}
+.add:hover{
+    background-color: #005ba4;
+}
+.buttonsForSection{
+    margin-top: 20px;
+    height: auto;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-around;
+}
+.but{
+    height: 40px;
+    width: 120px;
+    color: #ffffff;
+    font-family: "Kanit", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    border-radius:10px ;
+    background-color: #029bf3;
+    border: 0;
+    box-shadow: 3px 5px 6px rgb(137, 137, 137);
+    transition: 0.4s;
+}
+.but:hover{
+    background-color: #005ba4;
 }
